src/objects/Viewer_Custom_Configuration__c.object
<CustomObject>
    <description>Used to support the configuration of the standard viewer on an Assessment Template by Assessment Template basis. This configuration is done in the ExAM Configuration tab.</description>
    <fields>
        <fullName>Answer_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Manager_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment Manager List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchical Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Question_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Question Mode</label>
        <type>Checkbox</type>
    </fields>
    <label>Viewer Custom Configuration</label>
    <nameField>
        <label>Viewer Custom Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Viewer Custom Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>